fix spacing between friends on social page

--- a/src/css/Shared/section.css
+++ b/src/css/Shared/section.css
@@ -1,4 +1,4 @@
 .section{
-    width: 80%;
+    width: 100%;
     padding-top: 20px;
 }
