--- a/src/css/Social/obj.css
+++ b/src/css/Social/obj.css
@@ -1,7 +1,7 @@
 .displayObj{
     box-sizing: border-box;
 
-    width: 400px;
+    width: 475px;
     height: 95px;
 
     background: #F1EEEA;
@@ -12,6 +12,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    padding: 10px;
+    margin: 10px;
 }
 
 .objProfilePhoto{
